exports[`borderColor properly applies a value when passed only one 1`] = `
Object {
  "border-bottom-color": "red",
  "border-left-color": "red",
  "border-right-color": "red",
  "border-top-color": "red",
}
`;

exports[`borderColor properly applies values when passed four 1`] = `
Object {
  "border-bottom-color": "green",
  "border-left-color": "yellow",
  "border-right-color": "blue",
  "border-top-color": "red",
}
`;

exports[`borderColor properly applies values when passed three 1`] = `
Object {
  "border-bottom-color": "green",
  "border-left-color": "blue",
  "border-right-color": "blue",
  "border-top-color": "red",
}
`;

exports[`borderColor properly applies values when passed two 1`] = `
Object {
  "border-bottom-color": "red",
  "border-left-color": "blue",
  "border-right-color": "blue",
  "border-top-color": "red",
}
`;
